--- a/style.css
+++ b/style.css
@@ -110,11 +110,13 @@ a:after {
     border-left: 3px solid #fff;
     right: -8px;
     animation: cursor .8s infinite, typing 20s steps(14) infinite;
+    
 }
 @keyframes cursor {
     to {
         border-left: 3px solid #fff;
     }
+    
 }
 
 @keyframes words {
@@ -161,7 +163,7 @@ span{
     margin: -4%;
     animation: floatImage 4s ease-in-out infinite;
     box-shadow: #3BAFEA  4px 4px;
-
+   
 }
 @keyframes floatImage {
     0% {
@@ -174,6 +176,8 @@ span{
         transform: translateY(0);
     }
 }
+
+
 .home-content p {
     font-size: 1.6rem;
 }
@@ -300,12 +304,15 @@ span{
 }
 .works-card img{
     width: 100%;
-    height: 300px;
+    height: 200px;
     transition: .5s ease;
     opacity: scale(0.7);
 }
+.works-card:hover{
+    transform: scale(1.05);
+}
 .works-card:hover img { 
-   transform: scale(1.1);
+   transform: scale(1.2);
 }
 .works-card .works-layer {
     position: absolute;
@@ -348,7 +355,35 @@ span{
        font-size: 2rem;
        color: var(--snd-bg-color);
 }
+.filteration {
+    align-items: center;
+    background-color: #262B40;
+    border-radius: 50px;
+    height: 80px;
+    width: 800px;
+    padding: 10px;
+    margin: 160px;
+    margin-bottom: 40px;
+    border: 2px solid #3BAFEA;
+}
+.filteration:hover {
+    background-color: #191f36;
+}
+button {
+    border: 5px solid #3BAFEA;
+    border-radius: 20px;
+    height: 50px;
+    width: 120px;
+    font-size: 18px;
+    margin-left: 50px;
+    
+}
+button:hover {
+    color: #fff;
+    background-color: #3BAFEA;
+    border: 2px solid #fff;
 
+}
 /**************************contact code ****************************/
 
 .contact h2 {
