--- a/style.css
+++ b/style.css
@@ -229,6 +229,12 @@ span{
     width: 40vw;
     border: 3px solid #59B2F4;
 }
+.about-img img{
+    border-radius: 10px;
+    height: 300px;
+    width: 40vw;
+    border: 3px solid #59B2F4;
+}
 .heading {
     text-align: center;
     font-size: 4.5rem;
